04-15/2016 *3.0.0*
------------------

This version is incompatible with V 2.x.x. Before upgrade, please check the following changes:

* Full typscript rewrite. Now the .d.ts file is created from source, not manually maintained.
* Automata definition format changed. Now States are defined in a string array, and initial state is explicitly set by
defining `initial_state`.
* Session Controller methods have changed signature: `session : Session<Controller>, state : string, msg : Message`. Transition
 parameter has been removed because it is redundant (`msg.msgId` is the transition id).
* `dispatchMessage` vs `postMessage`. Now, multiple sessions can create internal state changes in the correct way. External
 message passing must be done by calling `dispatchMessage`. Controller methods that want to trigger an internal state
 change must call `postMessge`.
* Session and their controllers can be serialized/deserialized.

07-07-2015 *2.0.1*
------------------

* Fixed typescript definitions.

07-07-2015 *2.0.0*
------------------

* Version incompatible with any 1.x.x version. Read readme for details.
* Fully asynchronous execution.
* Added 'consume message' callback.
* Logic object does not belong to the automata defintion anymore.
* Logic object concept is deprecated in favor of session controller.
* Session lifecycle has been modified: create, start, end.

07-02-2015 *1.1.1*
------------------

* Module exports for node.

07-02-2015 *1.1.0*
------------------

Major changes.

* Session.dispatch and Session.processMessage dissapear in favor of Session.consume
* Session.consume accepts a callback function triggered when the FDA ends executing its message queue.
* All examples are working.
* Added methods newGuardException and newSessionListener to the module object.
* Added documentation for all object variables.
* Added doclet annotations.
* Checked readme.md