@@ -1,3 +1,15 @@
+06-08-2016 *3.0.2*
+------------------
+
+`dispatchMessage` now notifies on `onError` callback if the session is finished. Previously it threw an error, making mandatory to wrap dispatchMessage methods with try/catch.
+Error callbacks have been refactored to return an Error instead of string.
+
+
+04-15/2016 *3.0.1*
+------------------
+
+* Changed error callback function to accept an Error instead of a String.
+
 04-15/2016 *3.0.0*
 ------------------
 
